# palettes-backend

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/application/dtos/: color_catalog_dto.py  palette_color_dto.py  palette_dto.py  tag_dto.py  user_dto.py
app/application/services/: color_catalog_service.py  favorite_service.py  palette_preview.py  palette_service.py  tag_service.py  user_service.py
app/core/: config.py  constants.py  exceptions.py  security.py
app/domain/entities/: color_catalog.py  favorite.py  palette.py  palette_color.py  user.py
app/domain/repositories/: color_catalog_repository.py  favorite_repository.py  palette_color_repository.py  palette_repository.py  tag_repository.py  user_repository.py
app/infrastructure/db/: session.py
app/infrastructure/models/: __init__.py  color_catalog_model.py  favorite_model.py  palette_color_model.py  palette_model.py  palette_tag_model.py  tag_model.py  user_model.py
app/infrastructure/repositories/: sqlalchemy_color_catalog_repository.py  sqlalchemy_favorite_repository.py  sqlalchemy_palette_color_repository.py  (+3 more)
app/presentation/: dependencies.py  error_handlers.py
docs/: schema.sql
migrations/: env.py
migrations/versions/: 11f848d3299f_initial_schema.py  b7d4e29a1f63_move_color_name_to_catalog.py  e621b78e3392_color_usage_triggers.py
scripts/: seed_colors.py
tests/fakes/: color_catalog_repository.py  favorite_repository.py  palette_color_repository.py  palette_repository.py  tag_repository.py  user_repository.py
(+18 files in other folders)
